Add controller base from contract Remove TodoItem.cs Update code generation to include cancellation token
